# QuantClaw

./: .gitignore  AGENT_AUDIT_REPORT.md  README.md  SURFACE_ANALYSIS_REPORT.md  build_surface.py  calibrate_and_plot.py  cleaner.py  debug_deribit.py  fetch_real_data.py  fetcher.py  generate_and_plot.py  generate_density_plot.py  generate_plot.py  generate_plots.py  generate_plots_base64.py  generate_plots_final.py  generate_ssvi_plot.py  implied_vol.py  plot_generator.py  pyproject.toml  schema.py  smooth_surface.py
data/: deribit_importer_final.py  init_db.py
data/raw/: btc_options_20260316.csv  btc_options_20260316_113557.csv  btc_options_20260316_140051.csv  btc_options_20260316_140247.csv  btc_options_20260316_140548.csv  btc_options_20260316_140805.csv  btc_options_20260316_142716.csv  demo_options.csv  eth_options_20260316.csv  eth_options_20260316_113618.csv
output/: calibration_report.md
pricing/: __init__.py  utils.py
pricing/methods/: __init__.py  monte_carlo.py  pde.py
pricing/models/: __init__.py  autocallable.py  barrier.py  interfaces.py
scripts/: recalibrate_deribit_svi_ssvi.py  test_surface_analysis.py  verify_surfaces.py
src/: arbitrage.py  fetch_surface.py  pipeline.py  schemas.py  ssvi_calibration.py  svi.py  svi_calibration.py  svi_calibration_btc.py
tests/: conftest.py  test_arbitrage.py  test_pipeline.py  test_roundtrip.py  test_ssvi.py  test_svi.py
vol_surface/: __init__.py  __main__.py  calibration.py  cli.py  fetcher.py  generate_ssvi_plot.py  surface.py  svi.py  visualization.py
vol_surface/calibration/: __init__.py  (+4 more)
(+13 files in other folders)
