[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vol-surface"
version = "0.1.0"
description = "SPX volatility surface calibration using SVI and SSVI models"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.12",
    "pydantic>=2.5",
    "yfinance>=0.2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
vol-surface = "vol_surface.cli:main"

[tool.setuptools.packages.find]
include = ["vol_surface*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
